# cori

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  test.py
cori/: config.py  main.py
cori/api/: generate.py  questionnaire.py
cori/models/: cover_letter.py  fields.py  questionnaire.py  research.py
cori/services/: generator.py  questionnaire.py  research.py
